--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,5 @@ tmp/
 
 # docker run command:
 # docker run --rm --name pydlp -v ${PWD}/downloads:/home/downloads -v ${PWD}/files:/home/files --network=container:gluetun my-ytdl-api
+# docker build and run command:
+# docker build -t my-ytdl-api .; docker run --rm --name pydlp -v ${PWD}/downloads:/home/downloads -v ${PWD}/files:/home/files --network=container:gluetun my-ytdl-api
